--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,28 @@
-/*
- * Estilos de tu proyecto
- */
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+*:before, *:after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0 auto;
+	line-height: 1.71429;
+	height: 100%;
+	/*font-family: '', sans-serif;*/
+	/*background-color: #e6ecf0;*/
+}
+
+img {
+	vertical-align: middle;
+}
+
+header nav img {
+	width: 200px;
+
+}
