--- a/css/main.css
+++ b/css/main.css
@@ -21,12 +21,42 @@ img {
 	vertical-align: middle;
 }
 
+header nav {
+	border-bottom: 2px solid #ccc;
+	display: flex;
+	align-items: center;
+	height: 80px;
+	padding: 20px;
+}
+
 header nav img {
+	width: 200px;
+	margin-right: 60px;
+}
+
+header nav #city-filter, #class-year-filter {
+	width: 200px;
+	height: 30px;
+	border: 1px solid #ccc;
+	font-size: 15px;
+	margin-right: 30px;
+}
+
+section nav {
+	margin: 0;
 	width: 200px;
 }
 
 section .button-menu {
 	list-style: none;
+	margin-right: 60px;
+}
+
+section .button-menu li button {
+	background-color: #ffe521;
+	color: #000;
+	width: 200px;
+	height: 20px;
 }
 
 section {
@@ -36,12 +66,12 @@ section {
 
 #show-data {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	flex-wrap: wrap;
-	padding: 50px;
+	margin-top: 30px;
 }
 
 #show-data .result {
 	font-size: 30px;
-	margin-right: 30px;
+	margin: 0;
 }
