--- a/css/main.css
+++ b/css/main.css
@@ -25,8 +25,8 @@ header nav {
 	border-bottom: 2px solid #ccc;
 	display: flex;
 	align-items: center;
-	height: 80px;
-	padding: 20px;
+	height: 90px;
+	padding: 20px 20px 20px 66px;
 }
 
 header nav img {
@@ -36,29 +36,50 @@ header nav img {
 
 header nav #city-filter, #class-year-filter {
 	width: 200px;
-	height: 30px;
-	border: 1px solid #ccc;
-	font-size: 15px;
-	margin-right: 30px;
+    height: 40px;
+    border: 1px solid #ccc;
+    font-size: 15px;
+    margin-right: 30px;
+    background-color: #fff;
+    padding-left: 10px
 }
-
-
 
 section nav {
 	margin: 0;
-	width: 200px;
+	width: auto;
 }
 
 section .button-menu {
 	list-style: none;
-	margin-right: 60px;
+	margin-right: 30px;
+}
+
+.disabled {
+	background-color: #ccc !important; 
+	color: #000 !important;
 }
 
 section .button-menu li button {
 	background-color: #ffe521;
 	color: #000;
-	width: 200px;
-	height: 20px;
+	width: 250px;
+	height: 60px;
+	border: 1px solid #fff;
+	font-size: 15px;
+	padding: 10px;
+	margin-bottom: 5px;
+}
+
+section .button-menu li button:hover {
+	background-color: #2b2b2b;
+	color: #fff;
+	cursor: pointer;
+}
+
+section .button-menu li button:active {
+	background-color: #fff;
+	color: #000;
+	cursor: pointer;	
 }
 
 section {
@@ -70,10 +91,13 @@ section {
 	display: flex;
 	flex-direction: column;
 	flex-wrap: wrap;
-	margin-top: 30px;
+	margin: 20px 0 0 15px;
 }
 
 #show-data .result {
-	font-size: 30px;
+	font-size: 25px;
 	margin: 0;
+	border-left: 2px solid #ffe521;
+	margin-bottom: 25px;
+	padding: 0px 0 0px 20px;
 }
